[package]
name = "lwgeom"
version = "0.1.1"
edition = "2024"
authors = ["xhwhis <hi@whis.me>"]
description = "Rust bindings for the PostGIS LWGEOM geometry library."
keywords = ["postgis", "geometry", "geography", "lwgeom"]
categories = ["api-bindings"]
documentation = "https://docs.rs/lwgeom"
repository = "https://github.com/datafabriclabs/lwgeom"
license = "Unlicense"

[features]
mvt = ["lwgeom-sys/mvt"]

[dependencies]
# workspace dependencies
lwgeom-sys = { path = "lwgeom-sys", version = "0.1.1" }

# crates.io dependencies
libc.workspace = true
thiserror = "2.0"

[workspace.dependencies]
libc = { version = "0.2", default-features = false }

[workspace]
members = ["lwgeom-sys"]
