[package]
name = "lwgeom-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Low-level bindings for the PostGIS LWGEOM geometry library."
documentation = "https://docs.rs/lwgeom-sys"
license = "GPL-2.0-or-later"
links = "lwgeom"
include = [
  "/build.rs",
  "/src/",
  "/configure.ac",
  "/GNUmakefile",
  "/mvt.h",
  "/mvt.c",
  "/postgis_revision.h",
  "/postgis/COPYING",
  "/postgis/LICENSE.TXT",
  "/postgis/autogen.sh",
  "/postgis/postgis_config.h.in",
  "/postgis/Version.config",
  "/postgis/macros/",
  "/postgis/deps/ryu/LICENSE*",
  "/postgis/deps/ryu/Makefile.in",
  "/postgis/deps/ryu/*.h",
  "/postgis/deps/ryu/*.c",
  "/postgis/deps/wagyu/LICENSE*",
  "/postgis/deps/wagyu/*.h",
  "/postgis/deps/wagyu/*.cpp",
  "/postgis/deps/wagyu/include/mapbox/*.hpp",
  "/postgis/deps/wagyu/include/mapbox/geometry/*.hpp",
  "/postgis/deps/wagyu/include/mapbox/geometry/wagyu/*.hpp",
  "/postgis/liblwgeom/liblwgeom.h.in",
  "/postgis/liblwgeom/lwin_wkt_lex.l",
  "/postgis/liblwgeom/lwin_wkt_parse.y",
  "/postgis/liblwgeom/Makefile.in",
  "/postgis/liblwgeom/*.h",
  "/postgis/liblwgeom/*.c",
  "/postgis/liblwgeom/topo/*.h",
  "/postgis/liblwgeom/topo/*.c",
]

[features]
mvt = []

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
glob.workspace = true
pkg-config.workspace = true

[dependencies]
libc.workspace = true
